# course_Intelligent_systems

./: LICENSE  README.md
ES_real_estate_purchase/: expert_system.py  gui.py  main.py  rules.py
ES_real_estate_purchase/knowledge_base/: questions.py  rules.py
Langchain_ES_real_estate/: main.py
Langchain_real_estate/: bd_text.txt  convert_to_json.py  knowledge_base.json  main.py  pyproject.toml
